--- a/backend-fish-store/.env.example
+++ b/backend-fish-store/.env.example
@@ -14,6 +14,10 @@ APP_MAINTENANCE_DRIVER=file
 
 BCRYPT_ROUNDS=12
 
+# Admin seeder
+SEEDER_ADMIN_EMAIL=admin@email.com
+SEEDER_ADMIN_PASSWORD=password
+
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
