feat: checkout | cart | auth | profile

--- a/frontend-fish-store/.env.example
+++ b/frontend-fish-store/.env.example
@@ -3,3 +3,7 @@ VUE_APP_DEV_PORT=8888
 
 STRIPE_PK="publish-key"
 STRIPE_SK="secret-key"
+
+
+RISTRICTED_NOTIFY_MESSAGE='Sorry, this action is currently restricted.'
+RISTRICTED_APP_ENABLED='false'
