feat: stripe support & order updates

--- a/frontend-fish-store/.env.example
+++ b/frontend-fish-store/.env.example
@@ -1,9 +1,9 @@
 VUE_APP_NAME="Fish Store"
 VUE_APP_DEV_PORT=8888
 
+# https://dashboard.stripe.com/test/apikeys
 STRIPE_PK="publish-key"
-STRIPE_SK="secret-key"
 
-
+TEST_MODE='true'
 RISTRICTED_NOTIFY_MESSAGE='Sorry, this action is currently restricted.'
-RISTRICTED_APP_ENABLED='false'
+
