--- a/backend-fish-store/.env.example
+++ b/backend-fish-store/.env.example
@@ -18,6 +18,11 @@ BCRYPT_ROUNDS=12
 SEEDER_ADMIN_EMAIL=admin@email.com
 SEEDER_ADMIN_PASSWORD=password
 
+# Stripe
+STRIPE_KEY=your-stripe-key
+STRIPE_SECRET=your-stripe-secret
+STRIPE_WEBHOOK_SECRET=
+
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
