--- a/frontend-fish-store/package.json
+++ b/frontend-fish-store/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
