feat: connect customer client to backend API

--- a/backend-fish-store/.env.example
+++ b/backend-fish-store/.env.example
@@ -18,6 +18,9 @@ BCRYPT_ROUNDS=12
 SEEDER_ADMIN_EMAIL=admin@email.com
 SEEDER_ADMIN_PASSWORD=password
 
+# Sanctum
+SANCTUM_DELETE_ALL_TOKENS_ON_EXPIRED=true
+
 # Stripe
 STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
