--- a/frontend-fish-store/.env.example
+++ b/frontend-fish-store/.env.example
@@ -4,6 +4,8 @@ VUE_APP_DEV_PORT=8888
 # https://dashboard.stripe.com/test/apikeys
 STRIPE_PK="publish-key"
 
-TEST_MODE='true'
+ENABLE_STATIC_MODE='false' # testing or prototyping with static data flags
 RISTRICTED_NOTIFY_MESSAGE='Sorry, this action is currently restricted.'
 
+SERVER_API_URL='http://localhost:8000/api' # backend
+STATIC_DATA_URL='http://localhost:8888/data' # static mock data
