--- a/frontend-fish-store/package.json
+++ b/frontend-fish-store/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.2.1",
+    "gsap": "^3.12.5",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
